<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/afLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumFragment" >

    <TextView
        android:id="@+id/albumTitleAF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/albumTitle_lbl"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bigCoverAF"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/bigCover_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumTitleAF"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/shareButtonAF"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/shareButton_desc"
        android:scaleType="centerInside"
        android:src="@drawable/share_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/smallCoverAF"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/smallCover_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bigCoverAF"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/artistNameAF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:text="@string/artistName_lbl"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/smallCoverAF"
        app:layout_constraintTop_toBottomOf="@+id/bigCoverAF" />

    <TextView
        android:id="@+id/trackListAF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/trackList_Lbl"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallCoverAF" />

    <TextView
        android:id="@+id/nbTracksAF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/albumNBTracks_lbl"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/trackListAF"
        app:layout_constraintTop_toTopOf="@+id/trackListAF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackListRVAF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackListAF" />
</androidx.constraintlayout.widget.ConstraintLayout>