<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/albumRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/albumCV"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="50dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/albumLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/coverSmallIVSF"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cover_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/artistNameSF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/artistName_lbl"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/coverSmallIVSF"
                app:layout_constraintTop_toBottomOf="@+id/albumTitleSF" />

            <TextView
                android:id="@+id/nbTracksSF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/album.nb_tracks"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/coverSmallIVSF"
                app:layout_constraintTop_toBottomOf="@+id/artistNameSF" />

            <TextView
                android:id="@+id/albumTitleSF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/albumTitle_lbl"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/coverSmallIVSF"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sharedBySF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="4dp"
                android:text="@string/sharedBy_lbl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coverSmallIVSF" />

            <TextView
                android:id="@+id/dateSF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/date_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>