<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/albumRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/albumCV"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="50dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/albumLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/likeButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/likeButton_desc"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/nbTracks"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/like_not_favorite" />

            <ImageView
                android:id="@+id/coverSmallIV"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/cover_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/artistName_lbl"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/coverSmallIV"
                app:layout_constraintTop_toBottomOf="@+id/albumTitle" />

            <TextView
                android:id="@+id/nbTracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/album.nb_tracks"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/coverSmallIV"
                app:layout_constraintTop_toBottomOf="@+id/artistName" />

            <TextView
                android:id="@+id/albumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/albumTitle_lbl"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/coverSmallIV"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>